[gd_scene load_steps=36 format=3 uid="uid://b4lsq4j31jm0c"]

[ext_resource type="Script" path="res://scenes/mob.gd" id="1_uk6uk"]
[ext_resource type="Texture2D" uid="uid://co4eihc8e5y20" path="res://Assets/Characters/bug/basic_bug.png" id="2_4yvq4"]
[ext_resource type="Texture2D" uid="uid://dao871lqfvf7m" path="res://Assets/Characters/bug/basic_bug_2.png" id="3_xmnyx"]
[ext_resource type="Texture2D" uid="uid://b7iqd8gaaurj4" path="res://Assets/Characters/soldier/soldier_walk_1.png" id="4_oiqwj"]
[ext_resource type="Texture2D" uid="uid://b7e6snpc3o1r" path="res://Assets/Characters/soldier/soldier_walk_2.png" id="5_u1etl"]
[ext_resource type="Texture2D" uid="uid://c41su37ytbika" path="res://Assets/Characters/soldier/soldier_walk_3.png" id="6_f5v34"]
[ext_resource type="Texture2D" uid="uid://chndoysfc6it3" path="res://Assets/Characters/soldier/soldier_shoot_1.png" id="7_7i4y6"]
[ext_resource type="Texture2D" uid="uid://bm3cyctwbbbu4" path="res://Assets/Characters/soldier/soldier_shoot_3.png" id="8_o2a2t"]
[ext_resource type="Texture2D" uid="uid://bg0btfqrfsysi" path="res://Assets/Characters/soldier/soldier_shoot_2.png" id="9_fvcy6"]
[ext_resource type="Texture2D" uid="uid://b1sabaji22vnh" path="res://Assets/Characters/spider/spider_1.png" id="10_13xbj"]
[ext_resource type="Texture2D" uid="uid://iy87in0bsjob" path="res://Assets/Characters/spider/spider_2.png" id="11_1lvpj"]
[ext_resource type="Texture2D" uid="uid://bx0mfi4xw7vuv" path="res://Assets/Characters/spider/spider_3.png" id="12_37sfh"]
[ext_resource type="Texture2D" uid="uid://bf5s58ojbuyqm" path="res://Assets/Characters/spider/spider_red_1.png" id="13_y1dm6"]
[ext_resource type="Texture2D" uid="uid://cqm1ajg2nlov7" path="res://Assets/Characters/spider/spider_red_2.png" id="14_lksgo"]
[ext_resource type="Texture2D" uid="uid://c6b4g0psx38ql" path="res://Assets/Characters/spider/spider_red_3.png" id="15_mxama"]
[ext_resource type="Texture2D" uid="uid://c1o4avu4su2k0" path="res://Assets/Icons/empty_heart.png" id="16_p0kvg"]
[ext_resource type="Texture2D" uid="uid://bebku0aa4cg6f" path="res://Assets/Icons/heart.png" id="17_6phe1"]
[ext_resource type="Texture2D" uid="uid://bno5dg4hyr27j" path="res://Assets/Characters/soldier/soldier_dead_1.png" id="18_f4jxe"]
[ext_resource type="Texture2D" uid="uid://drr0hufdx5sna" path="res://Assets/Characters/soldier/soldier_dead_2.png" id="19_crwh7"]
[ext_resource type="Texture2D" uid="uid://cjpfxxv6go4xp" path="res://Assets/Characters/soldier/soldier_dead_3.png" id="20_yqnmh"]
[ext_resource type="Texture2D" uid="uid://ckmsqnvt4khj2" path="res://Assets/Characters/soldier/soldier_dead_4.png" id="21_odivr"]
[ext_resource type="Texture2D" uid="uid://t4vcpie0uvtt" path="res://Assets/Characters/soldier/soldier_dead_5.png" id="22_qd0fi"]
[ext_resource type="Texture2D" uid="uid://dltxcua03mpft" path="res://Assets/Characters/soldier/soldier_dead_6.png" id="23_v52ll"]
[ext_resource type="Texture2D" uid="uid://d0c4c0y3ilbaf" path="res://Assets/Characters/soldier/soldier_dead_7.png" id="24_tmli0"]
[ext_resource type="Texture2D" uid="uid://glyhp68en1j2" path="res://Assets/Characters/spider/spider_dead_1.png" id="25_01g1l"]
[ext_resource type="Texture2D" uid="uid://d4jfo3o5hiqm3" path="res://Assets/Characters/spider/spider_dead_2.png" id="26_bcc7v"]
[ext_resource type="Texture2D" uid="uid://ckawendvs1gx" path="res://Assets/Characters/spider/spider_dead_3.png" id="27_u1a7i"]
[ext_resource type="Texture2D" uid="uid://c0pwgabxi4mhx" path="res://Assets/Characters/spider/spider_dead_4.png" id="28_rr0kb"]
[ext_resource type="Texture2D" uid="uid://kdd1whykwfc0" path="res://Assets/Characters/spider/spider_dead_5.png" id="29_m466w"]
[ext_resource type="Texture2D" uid="uid://dp37g3bhu221" path="res://Assets/Characters/spider/spider_dead_6.png" id="30_trtur"]
[ext_resource type="Texture2D" uid="uid://xihegy8er2vl" path="res://Assets/Characters/spider/spider_dead_7.png" id="31_1nrdc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cxtoe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_4yvq4")
}, {
"duration": 1.0,
"texture": ExtResource("3_xmnyx")
}],
"loop": true,
"name": &"bug",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_oiqwj")
}, {
"duration": 1.0,
"texture": ExtResource("5_u1etl")
}, {
"duration": 1.0,
"texture": ExtResource("4_oiqwj")
}, {
"duration": 1.0,
"texture": ExtResource("6_f5v34")
}],
"loop": true,
"name": &"soldier",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_7i4y6")
}, {
"duration": 1.0,
"texture": ExtResource("8_o2a2t")
}, {
"duration": 1.0,
"texture": ExtResource("9_fvcy6")
}],
"loop": true,
"name": &"soldier_attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_7i4y6")
}, {
"duration": 1.0,
"texture": ExtResource("9_fvcy6")
}, {
"duration": 1.0,
"texture": ExtResource("8_o2a2t")
}],
"loop": true,
"name": &"soldier_attack_end",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_13xbj")
}, {
"duration": 1.0,
"texture": ExtResource("11_1lvpj")
}, {
"duration": 1.0,
"texture": ExtResource("12_37sfh")
}, {
"duration": 1.0,
"texture": ExtResource("11_1lvpj")
}],
"loop": true,
"name": &"spider",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_y1dm6")
}, {
"duration": 1.0,
"texture": ExtResource("14_lksgo")
}, {
"duration": 1.0,
"texture": ExtResource("15_mxama")
}, {
"duration": 1.0,
"texture": ExtResource("14_lksgo")
}],
"loop": true,
"name": &"spider_attack",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5wwe1"]
radius = 29.4444
height = 76.6667

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vkt81"]
radius = 29.4444
height = 76.6667

[sub_resource type="SpriteFrames" id="SpriteFrames_7x2qw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_p0kvg")
}, {
"duration": 1.0,
"texture": ExtResource("17_6phe1")
}, {
"duration": 1.0,
"texture": ExtResource("16_p0kvg")
}],
"loop": true,
"name": &"bug",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_f4jxe")
}, {
"duration": 1.0,
"texture": ExtResource("19_crwh7")
}, {
"duration": 1.0,
"texture": ExtResource("20_yqnmh")
}, {
"duration": 1.0,
"texture": ExtResource("21_odivr")
}, {
"duration": 1.0,
"texture": ExtResource("22_qd0fi")
}, {
"duration": 1.0,
"texture": ExtResource("23_v52ll")
}, {
"duration": 1.0,
"texture": ExtResource("24_tmli0")
}],
"loop": true,
"name": &"soldier",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_01g1l")
}, {
"duration": 1.0,
"texture": ExtResource("26_bcc7v")
}, {
"duration": 1.0,
"texture": ExtResource("27_u1a7i")
}, {
"duration": 1.0,
"texture": ExtResource("28_rr0kb")
}, {
"duration": 1.0,
"texture": ExtResource("29_m466w")
}, {
"duration": 1.0,
"texture": ExtResource("30_trtur")
}, {
"duration": 1.0,
"texture": ExtResource("31_1nrdc")
}],
"loop": true,
"name": &"spider",
"speed": 15.0
}]

[node name="Mob" type="CharacterBody2D" groups=["enemies"]]
script = ExtResource("1_uk6uk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_cxtoe")
animation = &"soldier_attack"
frame_progress = 0.869983
metadata/_edit_group_ = true

[node name="ShootPoint" type="Marker2D" parent="AnimatedSprite2D"]
position = Vector2(16, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5, 0)
scale = Vector2(1.8, 1.8)
shape = SubResource("CapsuleShape2D_5wwe1")
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-5, 0)
scale = Vector2(1.8, 1.8)
shape = SubResource("CapsuleShape2D_vkt81")

[node name="DeadSprites" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_7x2qw")
animation = &"spider"

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="DeadSprites" to="." method="_on_dead_sprites_animation_finished"]
[connection signal="animation_looped" from="DeadSprites" to="." method="_on_dead_sprites_animation_finished"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_bullet_timer_timeout"]
